--- a/css/theme.css
+++ b/css/theme.css
@@ -140,6 +140,15 @@ a:hover,a:focus {
 		height:100%;
 		padding:0;
 	}
+	.intro .intro-body .brand-heading1 {
+		font-size:30px;
+		margin-top:90px;
+		margin-bottom:20px;
+		border-top:2px solid #fff;
+		border-bottom:2px solid #fff;
+		display:inline-block;
+		padding:10px 0;
+	}
 	.intro .intro-body .brand-heading {
 		font-size:60px;
 		margin-top:90px;
